@@ -169,7 +169,7 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
     }
 
     protected record AnalyzerState(
-            PMap<String, List<CodeUnit>> symbolIndex,
+            PMap<String, Set<CodeUnit>> symbolIndex,
             PMap<CodeUnit, CodeUnitProperties> codeUnitState,
             PMap<ProjectFile, FileProperties> fileState,
             SymbolKeyIndex symbolKeyIndex,
@@ -214,7 +214,7 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
     private record FileAnalysisResult(
             List<CodeUnit> topLevelCUs,
             Map<CodeUnit, CodeUnitProperties> codeUnitState,
-            Map<String, List<CodeUnit>> codeUnitsBySymbol,
+            Map<String, Set<CodeUnit>> codeUnitsBySymbol,
             List<String> importStatements,
             @Nullable TSTree parsedTree) {}
 
@@ -306,7 +306,7 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
 
         var timing = ConstructionTiming.create();
         // Local mutable maps to accumulate analysis results, then snapshotted into immutable PMaps
-        var localSymbolIndex = new ConcurrentHashMap<String, List<CodeUnit>>();
+        var localSymbolIndex = new ConcurrentHashMap<String, Set<CodeUnit>>();
         var localCodeUnitState = new ConcurrentHashMap<CodeUnit, CodeUnitProperties>();
         var localFileState = new ConcurrentHashMap<ProjectFile, FileProperties>();
         List<CompletableFuture<?>> futures = new ArrayList<>();
@@ -372,8 +372,12 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
         keySet.addAll(localSymbolIndex.keySet());
         var symbolKeyIndex = new SymbolKeyIndex(Collections.unmodifiableNavigableSet(keySet));
 
+        // Convert local mutable Sets to immutable Sets before wrapping in PMap
+        var immutableSymbolIndex = new HashMap<String, Set<CodeUnit>>();
+        localSymbolIndex.forEach((key, value) -> immutableSymbolIndex.put(key, Collections.unmodifiableSet(value)));
+
         var initialState = new AnalyzerState(
-                HashTreePMap.from(localSymbolIndex),
+                HashTreePMap.from(immutableSymbolIndex),
                 HashTreePMap.from(localCodeUnitState),
                 HashTreePMap.from(localFileState),
                 symbolKeyIndex,
@@ -592,10 +596,6 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
             searchSignature = null;
         }
 
-        if (baseName.isEmpty()) {
-            return Optional.empty();
-        }
-
         // Use symbolIndex to pre-filter candidates instead of scanning all CodeUnits.
         Set<CodeUnit> candidates = lookupCandidatesByFqName(baseName);
         if (candidates.isEmpty()) {
@@ -654,18 +654,16 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
      */
     private Set<CodeUnit> lookupCandidatesByFqName(String baseName) {
         if (baseName.isEmpty()) {
-            return Collections.emptySet();
+            return Set.of();
         }
 
         var index = this.state.symbolIndex();
         if (index.isEmpty()) {
-            return Collections.emptySet();
+            return Set.of();
         }
 
-        var result = new LinkedHashSet<CodeUnit>();
-
         // Candidate symbol keys: the full baseName and each suffix after a '.'.
-        var candidateKeys = new LinkedHashSet<String>();
+        var candidateKeys = new HashSet<>();
         candidateKeys.add(baseName);
 
         int dot = baseName.indexOf('.');
@@ -674,14 +672,11 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
             dot = baseName.indexOf('.', dot + 1);
         }
 
-        for (var key : candidateKeys) {
-            var bucket = index.get(key);
-            if (bucket != null && !bucket.isEmpty()) {
-                result.addAll(bucket);
-            }
-        }
-
-        return result;
+        return candidateKeys.stream()
+                .map(index::get)
+                .filter(Objects::nonNull)
+                .flatMap(Set::stream)
+                .collect(Collectors.toUnmodifiableSet());
     }
 
     @Override
@@ -757,7 +752,7 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
                     if (!symbolLower.startsWith(lowerCaseQuery)) {
                         break; // stop when the prefix no longer matches
                     }
-                    results.addAll(current.symbolIndex().getOrDefault(symbol, List.of()));
+                    results.addAll(current.symbolIndex().getOrDefault(symbol, Set.of()));
                 }
             } catch (IllegalArgumentException e) {
                 // Defensive fallback: if tail scan fails for any reason, ignore and continue with generic scan
@@ -785,7 +780,7 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
             }
 
             if (matches) {
-                results.addAll(current.symbolIndex().getOrDefault(symbol, List.of()));
+                results.addAll(current.symbolIndex().getOrDefault(symbol, Set.of()));
             }
         }
 
@@ -1634,7 +1629,7 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
         Map<CodeUnit, List<String>> localSignatures = new HashMap<>();
         Map<CodeUnit, List<Range>> localSourceRanges = new HashMap<>();
         Map<CodeUnit, List<String>> localRawSupertypes = new HashMap<>();
-        Map<String, List<CodeUnit>> localCodeUnitsBySymbol = new HashMap<>();
+        Map<String, Set<CodeUnit>> localCodeUnitsBySymbol = new HashMap<>();
         Map<String, CodeUnit> localCuByFqName = new HashMap<>(); // For parent lookup within the file
         List<String> localImportStatements = new ArrayList<>(); // For collecting import lines
         Map<CodeUnit, Boolean> localHasBody = new HashMap<>();
@@ -1981,11 +1976,11 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
             localHasBody.put(cu, hasBody);
 
             localCodeUnitsBySymbol
-                    .computeIfAbsent(cu.identifier(), k -> new ArrayList<>())
+                    .computeIfAbsent(cu.identifier(), k -> new HashSet<>())
                     .add(cu);
             if (!cu.shortName().equals(cu.identifier())) {
                 localCodeUnitsBySymbol
-                        .computeIfAbsent(cu.shortName(), k -> new ArrayList<>())
+                        .computeIfAbsent(cu.shortName(), k -> new HashSet<>())
                         .add(cu);
             }
 
@@ -2202,15 +2197,13 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
         // in the local symbol map. This guarantees getDefinition() can resolve them via symbolIndex.
         for (var cu : localStates.keySet()) {
             String identifierKey = cu.identifier();
-            var bucket = localCodeUnitsBySymbol.computeIfAbsent(identifierKey, k -> new ArrayList<>());
-            if (!bucket.contains(cu)) {
-                bucket.add(cu);
-            }
+            localCodeUnitsBySymbol
+                    .computeIfAbsent(identifierKey, k -> new HashSet<>())
+                    .add(cu);
             if (!cu.shortName().equals(identifierKey)) {
-                var shortBucket = localCodeUnitsBySymbol.computeIfAbsent(cu.shortName(), k -> new ArrayList<>());
-                if (!shortBucket.contains(cu)) {
-                    shortBucket.add(cu);
-                }
+                localCodeUnitsBySymbol
+                        .computeIfAbsent(cu.shortName(), k -> new HashSet<>())
+                        .add(cu);
             }
         }
 
@@ -2228,7 +2221,6 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
                     .collect(Collectors.joining("; "));
             log.error("Unexpected duplicate top-level CodeUnits in file {}: [{}]", file, diagnostics);
         }
-        var finalLocalTopLevelCUs = localTopLevelCUs.stream().distinct().toList();
 
         long __processEnd = System.nanoTime();
         if (timing != null) {
@@ -2237,7 +2229,7 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
             timing.processStageLastEndNanos().accumulateAndGet(__processEnd, Math::max);
         }
         return new FileAnalysisResult(
-                Collections.unmodifiableList(finalLocalTopLevelCUs),
+                localTopLevelCUs.stream().distinct().toList(),
                 Collections.unmodifiableMap(localStates),
                 localCodeUnitsBySymbol,
                 Collections.unmodifiableList(localImportStatements),
@@ -2880,18 +2872,9 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
      */
     protected String textSlice(TSNode node, String src) {
         if (node.isNull()) return "";
-        // Get the byte array representation of the source
-        // This may be cached for better performance in a real implementation
-        byte[] bytes;
-        try {
-            bytes = src.getBytes(StandardCharsets.UTF_8);
-        } catch (Exception e) {
-            // Fallback in case of encoding error - use safe conversion method
-            log.warn("Error getting bytes from source: {}. Falling back to safe substring conversion", e.getMessage());
-
-            return ASTTraversalUtils.safeSubstringFromByteOffsets(src, node.getStartByte(), node.getEndByte());
-        }
-
+        // Get the byte array representation of the source - using StandardCharsets.UTF_8 does not throw checked
+        // exceptions
+        byte[] bytes = src.getBytes(StandardCharsets.UTF_8);
         // Extract using correct byte indexing
         return textSliceFromBytes(node.getStartByte(), node.getEndByte(), bytes);
     }
@@ -2900,17 +2883,9 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
      * Extracts a substring from the source code based on byte offsets.
      */
     protected String textSlice(int startByte, int endByte, String src) {
-        // Get the byte array representation of the source
-        byte[] bytes;
-        try {
-            bytes = src.getBytes(StandardCharsets.UTF_8);
-        } catch (Exception e) {
-            // Fallback in case of encoding error - use safe conversion method
-            log.warn("Error getting bytes from source: {}. Falling back to safe substring conversion", e.getMessage());
-
-            return ASTTraversalUtils.safeSubstringFromByteOffsets(src, startByte, endByte);
-        }
-
+        // Get the byte array representation of the source - using StandardCharsets.UTF_8 does not throw checked
+        // exceptions
+        byte[] bytes = src.getBytes(StandardCharsets.UTF_8);
         return textSliceFromBytes(startByte, endByte, bytes);
     }
 
@@ -3001,28 +2976,16 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
             return Optional.empty();
         }
 
-        try {
-            TSNode nameNode = decl.getChildByFieldName(identifierFieldName);
-            if (nameNode != null && !nameNode.isNull()) {
-                nameOpt = Optional.of(ASTTraversalUtils.safeSubstringFromByteOffsets(
-                        src, nameNode.getStartByte(), nameNode.getEndByte()));
-            } else if (!isNullNameExpectedForExtraction(decl.getType())) {
-                log.debug(
-                        "getChildByFieldName('{}') returned null or isNull for node type {} at line {}",
-                        identifierFieldName,
-                        decl.getType(),
-                        decl.getStartPoint().getRow() + 1);
-            }
-        } catch (Exception e) {
-            final String snippet = ASTTraversalUtils.safeSubstringFromByteOffsets(
-                    src, decl.getStartByte(), Math.min(decl.getEndByte(), decl.getStartByte() + 20));
-
-            log.warn(
-                    "Error extracting simple name using field '{}' from node type {} for node starting with '{}...': {}",
+        TSNode nameNode = decl.getChildByFieldName(identifierFieldName);
+        if (nameNode != null && !nameNode.isNull()) {
+            nameOpt = Optional.of(ASTTraversalUtils.safeSubstringFromByteOffsets(
+                    src, nameNode.getStartByte(), nameNode.getEndByte()));
+        } else if (!isNullNameExpectedForExtraction(decl.getType())) {
+            log.debug(
+                    "getChildByFieldName('{}') returned null or isNull for node type {} at line {}",
                     identifierFieldName,
                     decl.getType(),
-                    snippet.isEmpty() ? "EMPTY" : snippet,
-                    e.getMessage());
+                    decl.getStartPoint().getRow() + 1);
         }
 
         if (nameOpt.isEmpty() && !isNullNameExpectedForExtraction(decl.getType())) {
@@ -3206,7 +3169,7 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
             ProjectFile pf,
             FileAnalysisResult analysisResult,
             @Nullable ConstructionTiming timing,
-            Map<String, List<CodeUnit>> targetSymbolIndex,
+            Map<String, Set<CodeUnit>> targetSymbolIndex,
             Map<CodeUnit, CodeUnitProperties> targetCodeUnitState,
             Map<ProjectFile, FileProperties> targetFileState) {
         if (analysisResult.topLevelCUs().isEmpty()
@@ -3220,15 +3183,12 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
         analysisResult.codeUnitsBySymbol().forEach((symbol, cus) -> {
             targetSymbolIndex.compute(symbol, (s, existing) -> {
                 if (existing == null || existing.isEmpty()) {
-                    return List.copyOf(cus);
+                    return new HashSet<>(cus);
                 }
                 if (cus.isEmpty()) return existing;
-                var merged = new ArrayList<CodeUnit>(existing.size() + cus.size());
-                merged.addAll(existing);
-                for (CodeUnit cu : cus) {
-                    if (!merged.contains(cu)) merged.add(cu);
-                }
-                return List.copyOf(merged);
+                var merged = new HashSet<>(existing);
+                merged.addAll(cus);
+                return merged;
             });
         });
 
@@ -3383,7 +3343,7 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
                             var symbolsToRemove = new ArrayList<String>();
                             newSymbolIndex.replaceAll((symbol, cus) -> {
                                 var remaining =
-                                        cus.stream().filter(fromFile.negate()).toList();
+                                        cus.stream().filter(fromFile.negate()).collect(Collectors.toSet());
                                 if (remaining.isEmpty()) symbolsToRemove.add(symbol);
                                 return remaining;
                             });
@@ -3403,8 +3363,6 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
                                     reanalyzedCount.incrementAndGet();
                                 } catch (UncheckedIOException e) {
                                     log.warn("IO error re-analysing {}: {}", file, e.getMessage());
-                                } catch (RuntimeException e) {
-                                    log.error("Runtime error re-analysing {}: {}", file, e.getMessage(), e);
                                 } finally {
                                     reanalyzeNanos.addAndGet(System.nanoTime() - reanStart);
                                 }
@@ -3428,8 +3386,12 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
         nextKeySet.addAll(newSymbolIndex.keySet());
         var nextSymbolKeyIndex = new SymbolKeyIndex(Collections.unmodifiableNavigableSet(nextKeySet));
 
+        // Convert mutable Sets to immutable Sets before wrapping in PMap
+        var immutableNextSymbolIndex = new HashMap<String, Set<CodeUnit>>();
+        newSymbolIndex.forEach((key, value) -> immutableNextSymbolIndex.put(key, Collections.unmodifiableSet(value)));
+
         var nextState = new AnalyzerState(
-                HashTreePMap.from(newSymbolIndex),
+                HashTreePMap.from(immutableNextSymbolIndex),
                 HashTreePMap.from(newCodeUnitState),
                 HashTreePMap.from(newFileState),
                 nextSymbolKeyIndex,
@@ -3574,89 +3536,85 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
      * without rebinding this.state. Each step returns a new AnalyzerState snapshot.
      */
     protected AnalyzerState runPostProcessing(AnalyzerState baseState) {
-        try {
-            var afterImports = runImportResolution(baseState);
-            return runTypeAnalysis(afterImports);
-        } catch (Throwable t) {
-            log.warn("runPostProcessing encountered an error: {}", t.getMessage(), t);
-            return baseState;
-        }
+        var afterImports = runImportResolution(baseState);
+        return runTypeAnalysis(afterImports);
     }
 
     /**
      * Performs import resolution as a standalone step. Produces a new AnalyzerState with updated fileState.resolvedImports.
      */
     protected AnalyzerState runImportResolution(AnalyzerState baseState) {
-        try {
-            // Some of the getters expect `this.state` to be non-null, but a callee of this could be the constructor
-            TreeSitterAnalyzer delegateForImports = (TreeSitterAnalyzer) newSnapshot(baseState);
-            Map<ProjectFile, FileProperties> updatedFileState = new HashMap<>(baseState.fileState());
+        // Some of the getters expect `this.state` to be non-null, but a callee of this could be the constructor
+        TreeSitterAnalyzer delegateForImports = (TreeSitterAnalyzer) newSnapshot(baseState);
 
-            for (var entry : baseState.fileState().entrySet()) {
-                var file = entry.getKey();
-                var fileProps = entry.getValue();
+        Map<ProjectFile, FileProperties> updatedFileState = new ConcurrentHashMap<>(baseState.fileState());
 
-                Set<CodeUnit> resolvedImports = delegateForImports.resolveImports(file, fileProps.importStatements());
-                updatedFileState.put(
-                        file,
-                        new FileProperties(
-                                fileProps.topLevelCodeUnits(),
-                                fileProps.parsedTree(),
-                                fileProps.importStatements(),
-                                Collections.unmodifiableSet(resolvedImports)));
-            }
-
-            return new AnalyzerState(
-                    baseState.symbolIndex(),
-                    baseState.codeUnitState(),
-                    HashTreePMap.from(updatedFileState),
-                    baseState.symbolKeyIndex(),
-                    baseState.snapshotEpochNanos());
-        } catch (Throwable t) {
-            log.warn("runImportResolution encountered an error: {}", t.getMessage(), t);
-            return baseState;
+        int parallelism = Runtime.getRuntime().availableProcessors();
+        try (var fjp = new java.util.concurrent.ForkJoinPool(parallelism)) {
+            fjp.execute(() -> {
+                baseState.fileState().entrySet().parallelStream().forEach(entry -> {
+                    ProjectFile file = entry.getKey();
+                    FileProperties fileProps = entry.getValue();
+                    Set<CodeUnit> resolvedImports =
+                            delegateForImports.resolveImports(file, fileProps.importStatements());
+                    updatedFileState.put(
+                            file,
+                            new FileProperties(
+                                    fileProps.topLevelCodeUnits(),
+                                    fileProps.parsedTree(),
+                                    fileProps.importStatements(),
+                                    Collections.unmodifiableSet(resolvedImports)));
+                });
+            });
         }
+
+        return new AnalyzerState(
+                baseState.symbolIndex(),
+                baseState.codeUnitState(),
+                HashTreePMap.from(updatedFileState),
+                baseState.symbolKeyIndex(),
+                baseState.snapshotEpochNanos());
     }
 
     /**
      * Performs type analysis (direct supertypes) as a standalone step. Produces a new AnalyzerState with updated codeUnitState.supertypes.
      */
     protected AnalyzerState runTypeAnalysis(AnalyzerState baseState) {
-        try {
-            // Some of the getters expect `this.state` to be non-null, but a callee of this could be the constructor
-            TreeSitterAnalyzer delegateForTypes = (TreeSitterAnalyzer) newSnapshot(baseState);
-            Map<CodeUnit, CodeUnitProperties> updatedCodeUnitState = new HashMap<>(baseState.codeUnitState());
+        // Some of the getters expect `this.state` to be non-null, but a callee of this could be the constructor
+        TreeSitterAnalyzer delegateForTypes = (TreeSitterAnalyzer) newSnapshot(baseState);
 
-            for (var entry : baseState.codeUnitState().entrySet()) {
-                var cu = entry.getKey();
-                var props = entry.getValue();
-                if (!cu.isClass()) continue;
+        Map<CodeUnit, CodeUnitProperties> updatedCodeUnitState = new ConcurrentHashMap<>(baseState.codeUnitState());
 
-                List<CodeUnit> supers = List.copyOf(delegateForTypes.computeSupertypes(cu));
-
-                if (!Objects.equals(props.supertypes(), supers)) {
-                    updatedCodeUnitState.put(
-                            cu,
-                            new CodeUnitProperties(
-                                    props.children(),
-                                    props.signatures(),
-                                    props.ranges(),
-                                    props.rawSupertypes(),
-                                    supers,
-                                    props.hasBody()));
-                }
-            }
-
-            return new AnalyzerState(
-                    baseState.symbolIndex(),
-                    HashTreePMap.from(updatedCodeUnitState),
-                    baseState.fileState(),
-                    baseState.symbolKeyIndex(),
-                    baseState.snapshotEpochNanos());
-        } catch (Throwable t) {
-            log.warn("runTypeAnalysis encountered an error: {}", t.getMessage(), t);
-            return baseState;
+        int parallelism = Runtime.getRuntime().availableProcessors();
+        try (var fjp = new java.util.concurrent.ForkJoinPool(parallelism)) {
+            fjp.execute(() -> {
+                baseState.codeUnitState().entrySet().parallelStream()
+                        .filter(e -> e.getKey().isClass())
+                        .forEach(entry -> {
+                            CodeUnit cu = entry.getKey();
+                            CodeUnitProperties props = entry.getValue();
+                            List<CodeUnit> supers = delegateForTypes.computeSupertypes(cu);
+                            if (!Objects.equals(props.supertypes(), supers)) {
+                                updatedCodeUnitState.put(
+                                        cu,
+                                        new CodeUnitProperties(
+                                                props.children(),
+                                                props.signatures(),
+                                                props.ranges(),
+                                                props.rawSupertypes(),
+                                                supers,
+                                                props.hasBody()));
+                            }
+                        });
+            });
         }
+
+        return new AnalyzerState(
+                baseState.symbolIndex(),
+                HashTreePMap.from(updatedCodeUnitState),
+                baseState.fileState(),
+                baseState.symbolKeyIndex(),
+                baseState.snapshotEpochNanos());
     }
 
     /* ---------- comment detection for source expansion ---------- */
@@ -3745,48 +3703,42 @@ public abstract class TreeSitterAnalyzer implements IAnalyzer, SkeletonProvider,
                 declarationNode.getEndPoint().getRow(),
                 declarationNode.getStartByte()); // initial commentStartByte equals start
 
-        try {
-            // Walk preceding siblings and collect contiguous leading metadata nodes (comments, attributes)
-            List<TSNode> leading = new ArrayList<>();
-            TSNode current = declarationNode.getPrevSibling();
-            while (current != null && !current.isNull()) {
-                if (isLeadingMetadataNode(current)) {
-                    leading.add(current);
-                    current = current.getPrevSibling();
-                    continue;
-                }
-                break;
+        // Walk preceding siblings and collect contiguous leading metadata nodes (comments, attributes)
+        List<TSNode> leading = new ArrayList<>();
+        TSNode current = declarationNode.getPrevSibling();
+        while (current != null && !current.isNull()) {
+            if (isLeadingMetadataNode(current)) {
+                leading.add(current);
+                current = current.getPrevSibling();
+                continue;
             }
+            break;
+        }
 
-            // No leading metadata; keep the original range
-            if (leading.isEmpty()) {
-                return originalRange;
-            }
-
-            // Reverse to get earliest-first
-            Collections.reverse(leading);
-            int newStartByte = leading.getFirst().getStartByte();
-
-            Range expandedRange = new Range(
-                    originalRange.startByte(),
-                    originalRange.endByte(),
-                    originalRange.startLine(),
-                    originalRange.endLine(),
-                    newStartByte);
-
-            log.trace(
-                    "Expanded range for node. Body range [{}, {}], comment range starts at {} (added {} preceding metadata nodes)",
-                    originalRange.startByte(),
-                    originalRange.endByte(),
-                    expandedRange.commentStartByte(),
-                    leading.size());
-
-            return expandedRange;
-
-        } catch (Exception e) {
-            log.warn("Error during comment/metadata expansion for node: {}", e.getMessage());
+        // No leading metadata; keep the original range
+        if (leading.isEmpty()) {
             return originalRange;
         }
+
+        // Reverse to get earliest-first
+        Collections.reverse(leading);
+        int newStartByte = leading.getFirst().getStartByte();
+
+        Range expandedRange = new Range(
+                originalRange.startByte(),
+                originalRange.endByte(),
+                originalRange.startLine(),
+                originalRange.endLine(),
+                newStartByte);
+
+        log.trace(
+                "Expanded range for node. Body range [{}, {}], comment range starts at {} (added {} preceding metadata nodes)",
+                originalRange.startByte(),
+                originalRange.endByte(),
+                expandedRange.commentStartByte(),
+                leading.size());
+
+        return expandedRange;
     }
 
     /**
